# text_clustering

script/: auto_build.sh  calculate.py  feedid2url.py  generate_doc.py
src/: Algorithm.py  BaseModel.py  KMeans.py  Vectorizer.py  clustering.py  config.py  read_json.py  read_liulanqi_data.py  read_weishi_data.py  short_text_clustering.py
src/sdk/: demo.cpp  extracted_key_words.txt  kmeans.cpp  start_py3.5_tf1.4_docker.sh  tokenized_text.txt  tokenized_text_no_stopwords.txt  vectorizer.hpp
src/sdk/include/: inference.hpp  kmeans.hpp  labels.pb.h  load_model.hpp  read.cpp  text_cleaner.hpp  training.hpp  vectorizer.hpp
src/sdk/makefiles/: CMakeLists.txt
src/sdk/test/: load_test.cpp
test/: kmeans_clustering.py
